{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 104,
  "lineage": "b7d11ee4-4db3-49ae-f1d8-b3cdc5684cfe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d1c4aab7e37db8b8",
            "arn": "arn:aws:ec2:ap-southeast-1:792934701903:elastic-ip/eipalloc-0d1c4aab7e37db8b8",
            "domain": "vpc",
            "id": "eipalloc-0d1c4aab7e37db8b8",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-3-1-90-212.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.1.90.212",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "simple-golang-api-eip-natgw"
            },
            "tags_all": {
              "Name": "simple-golang-api-eip-natgw"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:792934701903:internet-gateway/igw-002186e4df0c8d5b1",
            "id": "igw-002186e4df0c8d5b1",
            "owner_id": "792934701903",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "simple-golang-api-igw"
            },
            "tags_all": {
              "Name": "simple-golang-api-igw"
            },
            "vpc_id": "vpc-048fc460a9e73c86e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d1c4aab7e37db8b8",
            "association_id": "eipassoc-063571548b8741e4d",
            "connectivity_type": "public",
            "id": "nat-0d03f47193b28bb95",
            "network_interface_id": "eni-06742df5321f9323a",
            "private_ip": "10.0.12.63",
            "public_ip": "3.1.90.212",
            "region": "ap-southeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08a71cac9e601e884",
            "tags": {
              "Name": "simple-golang-api-natgw"
            },
            "tags_all": {
              "Name": "simple-golang-api-natgw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.natgw",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:792934701903:route-table/rtb-083451ae6db69f79c",
            "id": "rtb-083451ae6db69f79c",
            "owner_id": "792934701903",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d03f47193b28bb95",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "simple-golang-api-route-table-private"
            },
            "tags_all": {
              "Name": "simple-golang-api-route-table-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-048fc460a9e73c86e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.natgw",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_subnet.public",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:792934701903:route-table/rtb-0e2134ae217279b08",
            "id": "rtb-0e2134ae217279b08",
            "owner_id": "792934701903",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-002186e4df0c8d5b1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "simple-golang-api-route-table-public"
            },
            "tags_all": {
              "Name": "simple-golang-api-route-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-048fc460a9e73c86e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0564f6bee0666566f",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-083451ae6db69f79c",
            "subnet_id": "subnet-0033c0c9938c99a11"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.natgw",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a78ca15618a34b28",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-083451ae6db69f79c",
            "subnet_id": "subnet-057f888b134faac22"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.natgw",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3fe23abd7d8e27b",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0e2134ae217279b08",
            "subnet_id": "subnet-08a71cac9e601e884"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c4aff30191d5479",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0e2134ae217279b08",
            "subnet_id": "subnet-089fe92375bd1367d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:792934701903:subnet/subnet-0033c0c9938c99a11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0033c0c9938c99a11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "792934701903",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "simple-golang-api-subnet-private-0",
              "karpenter.sh/discovery": "api-eks-cluster",
              "kubernetes.io/role/cni": "1",
              "kubernetes.io/role/internal-elb": "1",
              "mapPublicIpOnLaunch": "FALSE"
            },
            "tags_all": {
              "Name": "simple-golang-api-subnet-private-0",
              "karpenter.sh/discovery": "api-eks-cluster",
              "kubernetes.io/role/cni": "1",
              "kubernetes.io/role/internal-elb": "1",
              "mapPublicIpOnLaunch": "FALSE"
            },
            "vpc_id": "vpc-048fc460a9e73c86e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:792934701903:subnet/subnet-057f888b134faac22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057f888b134faac22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "792934701903",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "simple-golang-api-subnet-private-1",
              "karpenter.sh/discovery": "api-eks-cluster",
              "kubernetes.io/role/cni": "1",
              "kubernetes.io/role/internal-elb": "1",
              "mapPublicIpOnLaunch": "FALSE"
            },
            "tags_all": {
              "Name": "simple-golang-api-subnet-private-1",
              "karpenter.sh/discovery": "api-eks-cluster",
              "kubernetes.io/role/cni": "1",
              "kubernetes.io/role/internal-elb": "1",
              "mapPublicIpOnLaunch": "FALSE"
            },
            "vpc_id": "vpc-048fc460a9e73c86e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:792934701903:subnet/subnet-08a71cac9e601e884",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a71cac9e601e884",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "792934701903",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "simple-golang-api-subnet-public-0",
              "kubernetes.io/role/elb": "1",
              "mapPublicIpOnLaunch": "TRUE"
            },
            "tags_all": {
              "Name": "simple-golang-api-subnet-public-0",
              "kubernetes.io/role/elb": "1",
              "mapPublicIpOnLaunch": "TRUE"
            },
            "vpc_id": "vpc-048fc460a9e73c86e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:792934701903:subnet/subnet-089fe92375bd1367d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089fe92375bd1367d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "792934701903",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "simple-golang-api-subnet-public-1",
              "kubernetes.io/role/elb": "1",
              "mapPublicIpOnLaunch": "TRUE"
            },
            "tags_all": {
              "Name": "simple-golang-api-subnet-public-1",
              "kubernetes.io/role/elb": "1",
              "mapPublicIpOnLaunch": "TRUE"
            },
            "vpc_id": "vpc-048fc460a9e73c86e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:792934701903:vpc/vpc-048fc460a9e73c86e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ef82dff033862767",
            "default_route_table_id": "rtb-0298c1b75b8a818d3",
            "default_security_group_id": "sg-0c6c29393c22f0d56",
            "dhcp_options_id": "dopt-f69f4a90",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-048fc460a9e73c86e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0298c1b75b8a818d3",
            "owner_id": "792934701903",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "simple-golang-api-vpc",
              "kubernetes.io/cluster/api-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "simple-golang-api-vpc",
              "kubernetes.io/cluster/api-eks-cluster": "shared"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}